3.5.0/_sources/gallery/lines_bars_and_markers/span_regions.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/span_regions.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_lines_bars_and_markers_span_regions.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_span_regions.py:


================
Using span_where
================

Illustrate some helper functions for shading regions where a logical
mask is True.

See `matplotlib.collections.BrokenBarHCollection.span_where`.

.. GENERATED FROM PYTHON SOURCE LINES 11-39

.. code-block:: default


    import numpy as np
    import matplotlib.pyplot as plt
    import matplotlib.collections as collections


    t = np.arange(0.0, 2, 0.01)
    s1 = np.sin(2*np.pi*t)
    s2 = 1.2*np.sin(4*np.pi*t)


    fig, ax = plt.subplots()
    ax.set_title('using span_where')
    ax.plot(t, s1, color='black')
    ax.axhline(0, color='black', lw=2)

    collection = collections.BrokenBarHCollection.span_where(
        t, ymin=0, ymax=1, where=s1 > 0, facecolor='green', alpha=0.5)
    ax.add_collection(collection)

    collection = collections.BrokenBarHCollection.span_where(
        t, ymin=-1, ymax=0, where=s1 < 0, facecolor='red', alpha=0.5)
    ax.add_collection(collection)


    plt.show()





.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_span_regions_001.png
   :alt: using span_where
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_span_regions_001.png, /gallery/lines_bars_and_markers/images/sphx_glr_span_regions_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 40-49

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.collections.BrokenBarHCollection`
   - `matplotlib.collections.BrokenBarHCollection.span_where`
   - `matplotlib.axes.Axes.add_collection`
   - `matplotlib.axes.Axes.axhline`


.. _sphx_glr_download_gallery_lines_bars_and_markers_span_regions.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: span_regions.py <span_regions.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: span_regions.ipynb <span_regions.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
